test_regress/t/t_clk_scope_bad.out
%Warning-CLKDATA: t/t_clk_scope_bad.v:36:12: Clock used as data (on rhs of assignment) in sequential block 'clk'
                                           : ... In instance t.p2
      q <= d;
           ^
                  ... Use "/* verilator lint_off CLKDATA */" and lint_on around source to disable this message.
%Error: Exiting due to
